--- a/_site.yml
+++ b/_site.yml
@@ -11,6 +11,8 @@ navbar:
       href: emails.html
     - text: "Data and hints"
       href: hints.html
+    - text: "Writing feedback"
+      href: writing.html
     - text: "Help"
       href: help.html
     - text: "Rubric"
